--- a/frontEnd/chefControl/src/pages/loginPage/LoginPage.css
+++ b/frontEnd/chefControl/src/pages/loginPage/LoginPage.css
@@ -60,10 +60,10 @@
 .inputPassword {
   display: flex;
   align-items: center;
-  background-color: white;
+  background-color: #ff812dbd;
   border: 1px solid #ccc;
   padding: 0.75rem 1rem;
-  border-radius: 0.75rem;
+  border-radius: 1.5rem;
   margin-bottom: 1rem;
   font-size: 1rem;
   gap: 0.5rem;
@@ -77,6 +77,11 @@
   font-size: 1rem;
   background: transparent;
 }
+.inputEmail input::placeholder,
+.inputPassword input::placeholder {
+  color: #ffffff;
+
+}
 
 .inputEmail svg,
 .inputPassword svg {
@@ -84,7 +89,12 @@
   font-size: 1.2rem;
 }
 .loginButton {
-  width: 100%;
+  width: 50%;
+  display: flex;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
+  height: 5.5vh;
   background-color: #e65c00;
   color: white;
   font-weight: bold;
