--- a/frontEnd/chefControl/src/pages/loginPage/LoginPage.css
+++ b/frontEnd/chefControl/src/pages/loginPage/LoginPage.css
@@ -106,6 +106,23 @@
   margin-top: 1rem;
   transition: background 0.3s ease;
 }
+.toggle-mode-container button{
+  width: 30%;
+  margin-left: 10px;
+  align-items: center;
+  justify-content: center;
+  height: 4.5vh;
+  background-color: white;
+  color: #e65c00;
+  font-weight: bold;
+  border-radius: 0.1px;
+  border-color: #e65c00;
+  border-radius: 0.75rem;
+  cursor: pointer;
+  font-size: 0.8rem;
+  margin-top: 1rem;
+  transition: background 0.3s ease;
+}
 
 .loginButton:hover {
   background-color: #cc5200;
