--- a/frontEnd/chefControl/src/pages/formRequest/FormPage.css
+++ b/frontEnd/chefControl/src/pages/formRequest/FormPage.css
@@ -49,7 +49,30 @@ form {
 }
 
 /* Botão de envio */
-form button {
+form button{
+  display: flex;
+  background-color: #f78e3d;
+  border: none;
+  padding: 12px;
+  border-radius: 20px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 14px;
+  margin: 0 auto;
+  width: 60%;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  align-items: center;
+  justify-content: center;
+}
+
+form button:hover, .buttonOrder:hover {
+  background-color: #e5782c;
+  transform: scale(1.1);
+  transition: 0.3s;
+}
+.buttonOrder{
+  display: flex;
   background-color: #f78e3d;
   border: none;
   padding: 12px;
@@ -61,10 +84,8 @@ form button {
   width: 50%;
   cursor: pointer;
   transition: background-color 0.3s ease;
-}
+    margin-top: 1rem;
 
-form button:hover {
-  background-color: #e5782c;
 }
 
 .mensagem-enviada {
