--- a/frontEnd/chefControl/src/pages/tablesPage/TablesPage.css
+++ b/frontEnd/chefControl/src/pages/tablesPage/TablesPage.css
@@ -13,8 +13,7 @@
 }
 
 .tablesList {
-  width: 100%;
-  max-width: 320px;
+  width: 75%;
   padding: 20px;
   display: flex;
   flex-direction: column;
@@ -22,6 +21,12 @@
 }
 
 .tableCard {
+  width: 100%;
+  min-width: 400px;
+  display: flex;
+  margin: 0 auto;
+  justify-content: center;
+  flex-direction: column;
   background-color: #f1f1f1;
   border-radius: 15px;
   padding: 15px 20px;
@@ -48,14 +53,14 @@
 .cardActions {
   display: flex;
   justify-content: flex-end;
-  gap: 15px;
+  gap: 20px;
   margin-top: 8px;
     background-color: #f1f1f1;
 
 }
 
 .cardActions svg {
-  font-size: 14px;
+  font-size: 18px;
   color: #333;
   cursor: pointer;
   transition: transform 0.2s;
@@ -65,6 +70,7 @@
 
 .cardActions svg:hover {
   transform: scale(1.2);
+  color: #e5762c;
 }
 
 /* Botão flutuante */
@@ -86,9 +92,15 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   transition: background-color 0.3s;
 }
+.addButton svg{
+    background-color: #f78e3d;
 
-.addButton:hover {
+}
+
+.addButton:hover, .addButton svg:hover {
   background-color: #e5762c;
+  transform: scale(1.1);
+  transition: 0.4s;
 }
 /* ... seu CSS existente ... */
 
