--- a/frontEnd/chefControl/src/components/header/HeaderPages.css
+++ b/frontEnd/chefControl/src/components/header/HeaderPages.css
@@ -21,3 +21,15 @@
   font-family: 'Segoe UI', sans-serif;
   margin-top: 15px;
 }
+/* Adicione no final do seu arquivo EditOrderModal.css */
+
+.modal-error-message {
+  color: #d32f2f; /* Vermelho */
+  background-color: #ffcdd2; /* Fundo vermelho claro */
+  border: 1px solid #d32f2f;
+  padding: 10px;
+  border-radius: 5px;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 0;
+}
