--- a/frontEnd/chefControl/src/pages/tablesPage/TablesPage.css
+++ b/frontEnd/chefControl/src/pages/tablesPage/TablesPage.css
@@ -1,13 +1,10 @@
-*{
-  background-color: #ffde59;
-}
+ 
 .containerTablesPage {
   height: 100vh;
   background-color: #ffde59;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 40px;
   position: relative;
   font-family: sans-serif;
 }
@@ -139,4 +136,15 @@
 }
 .errorMessage {
   color: #d32f2f; /* Cor vermelha para erros */
+}
+@media(max-width: 400px){
+  .tableCard{
+    width: 85%;
+    min-width: auto;
+    
+  }
+
+  .addButton{
+    margin-top: 500vh;
+  }
 }
